# apriltag-rust

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  build.rs  wrapper.h
.github/workflows/: build.yml  build_windows.yml  test.yml
apriltag/: Cargo.toml  README.md
apriltag-image/: Cargo.toml  README.md
apriltag-image/src/: image_buf.rs  lib.rs
apriltag-image/tests/: detection.rs
apriltag-nalgebra/: Cargo.toml  README.md
apriltag-nalgebra/src/: image.rs  lib.rs  matd.rs  pose.rs
apriltag-sys/: Cargo.toml  build.rs
apriltag-sys/bindings/: bindings.rs
apriltag/examples/: detector.rs
apriltag/src/: common.rs  detection.rs  detector.rs  error.rs  families.rs  image_buf.rs  lib.rs  matd.rs  pose.rs  zarray.rs
apriltag/test_data/: DICT_APRILTAG_16h5-2x2-500-10-0.8-29,12,22,2.pnm
apriltag/tests/: detection.rs
bindings/: bindings.rs
examples/: detector.rs
src/: base.rs  common.rs  detection.rs  detector.rs  error.rs  families.rs  image_buf.rs  lib.rs  matd.rs  pose.rs  zarray.rs
tests/: test.rs
