[package]
name = "apriltag"
version = "0.1.0"
authors = ["jerry73204 <jerry73204@gmail.com>"]
edition = "2018"

[dependencies]
apriltag-sys = "0.1.3"
libc = "0.2"
image = { version = "0.23", optional = true }
nalgebra = { version = "0.19", optional = true }

[dev-dependencies]
anyhow = "1.0"
thiserror = "1.0"
image = { version = "0.23" }
argh = "0.1"

[features]
buildtime-bindgen = ["apriltag-sys/buildtime-bindgen"]
