[package]
name = "apriltag-sys"
version = "0.1.5"
description = "Rust bindings for AprilTag library"
authors = ["jerry73204 <jerry73204@gmail.com>", "Andrew Straw <strawman@astraw.com>"]
edition = "2018"
license = "BSD-2-Clause"
documentation = "https://docs.rs/apriltag-sys"
homepage = "https://github.com/jerry73204/apriltag-sys"
repository = "https://github.com/jerry73204/apriltag-sys.git"
readme = "README.md"

[dependencies]

[build-dependencies]
bindgen = { version = "0.59", optional = true }
cc = { version = "1.0", features = ["parallel"]}
glob = "0.3"
cmake = "0.1"
pkg-config = "0.3"
lazy_static = "1.4"

[features]
default = []
buildtime-bindgen = ["bindgen"]

# The source location and build method (cmake, direct cc, link system library)
# is selected by environment variable. Cargo features are not used because these
# are additive and can set by the package(s) that depend on apriltag-sys. (By
# this same logic, we should remove buildtime-bindgen feature and make it an
# environment variable.)
