[package]
name = "apriltag"
version = "0.3.1"
authors = ["jerry73204 <jerry73204@gmail.com>"]
edition = "2018"
description = "High level Rust bindings to AprilTag library"
categories = ["computer-vision"]
documentation = "https://docs.rs/apriltag/"
repository = "https://github.com/jerry73204/apriltag-rust.git"
homepage = "https://github.com/jerry73204/apriltag-rust"
readme = "README.md"
license-file = "LICENSE"

[dependencies]
apriltag-sys = "0.1.5"
libc = "0.2"
thiserror = "1.0"
image = { version = "0.23", optional = true }
nalgebra = { version = "0.22", optional = true }

[dev-dependencies]
anyhow = "1.0"
thiserror = "1.0"
image = { version = "0.23" }
structopt = "0.3.22"

[features]
full = ["image", "nalgebra"]
buildtime-bindgen = ["apriltag-sys/buildtime-bindgen"]

[package.metadata.docs.rs]
features = ["full"]
no-default-features = true
