[package]
name = "apriltag-image"
version = "0.1.0"
edition = "2021"
description = "Conversion from/to image crate types for apriltag"
authors = ["jerry73204 <jerry73204@gmail.com>"]
categories = ["computer-vision"]
documentation = "https://docs.rs/apriltag-image/"
repository = "https://github.com/jerry73204/apriltag-rust.git"
homepage = "https://github.com/jerry73204/apriltag-rust"
readme = "README.md"
license = "BSD-2-Clause"

[dependencies]
apriltag = { version = "0.4.0", path = "../apriltag" }
image = "0.24.5"
