[package]
name = "apriltag-nalgebra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apriltag = { version = "0.3.1", path = "../apriltag" }
nalgebra = "0.32.1"

[dev-dependencies]
nalgebra = { version = "0.32.1", features = ["rand"] }
