[package]
name = "apriltag"
version = "0.3.1"
authors = ["jerry73204 <jerry73204@gmail.com>"]
edition = "2021"
description = "High level Rust bindings to AprilTag library"
categories = ["computer-vision"]
documentation = "https://docs.rs/apriltag/"
repository = "https://github.com/jerry73204/apriltag-rust.git"
homepage = "https://github.com/jerry73204/apriltag-rust"
readme = "README.md"
license-file = "LICENSE"

[dependencies]
apriltag-sys = { version = "0.3.0", path = "../apriltag-sys" }
libc = "0.2.139"
thiserror = "1.0.38"

[dev-dependencies]
anyhow = "1.0.68"
thiserror = "1.0.38"
structopt = "0.3.26"

[features]
buildtime-bindgen = ["apriltag-sys/buildtime-bindgen"]

[package.metadata.docs.rs]
no-default-features = true
